--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -161,7 +161,7 @@
 
                                 </div>
                                 <div class="portlet-body form">
-                                    <p ng-if="view.aboutme != null && view.aboutme != '"> {{view.aboutme}}</p>
+                                    <p ng-if="view.aboutme != null && view.aboutme != ''"> {{view.aboutme}}</p>
                                     <p ng-if="view.aboutme == null || view.aboutme == ''"> Not Specified</p>
 
                                 </div>
