--- a/src/app/navigation/settings/settingNavigation.html
+++ b/src/app/navigation/settings/settingNavigation.html
@@ -15,17 +15,17 @@
                             </li>
                             <li ng-class="{ activateSettingNavBar: isActive('/settings/emailalerts')}" class="nav-item" id="pending">
                                 <a ui-sref="settings.emailalerts" class="nav-link ">
-                                    <span class="title">Manage Email Alerts</span>
+                                    <span >Manage Email Alerts</span>
                                 </a>
                             </li>
                             <li ng-class="{ activateSettingNavBar: isActive('/settings/contactFilters')}" class="nav-item " id="accept">
                                 <a ui-sref="settings.contactFilters" class="nav-link ">
-                                    <span class="title">Contact Filters</span>
+                                    <span >Contact Filters</span>
                                 </a>
                             </li>
                             <li ng-class="{ activateSettingNavBar: isActive('/settings/privacySettings')}" class="nav-item">
                                 <a ui-sref="settings.privacySettings" class="nav-link ">
-                                    <span class="title">Privacy Settings</span>
+                                    <span >Privacy Settings</span>
                                 </a>
                             </li>
                             <!--<li ng-class="{ activateSettingNavBar: isActive('/settings/membershipDetails')}" class="nav-item" >-->
@@ -35,7 +35,7 @@
                             <!--</li>-->
                             <li ng-class="{ activateSettingNavBar: isActive('/settings/deactivateProfile')}" class="nav-item" >
                                 <a ui-sref="settings.deactivateProfile" class="nav-link ">
-                                    <span class="title">Deactivate Profiles</span>
+                                    <span>Deactivate Profiles</span>
                                 </a>
                             </li>
 
