--- a/src/app/main/recomendation/recomendationTop.html
+++ b/src/app/main/recomendation/recomendationTop.html
@@ -13,29 +13,29 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <img class="recomended-image"
-                                                         ng-src="{{recomendationList[$index].imageSrc}}">
+                                                         ng-src="{{recomendation.imageSrc}}">
                                                 </div>
                                                 <div class="col-md-12">
-                                                    <span>{{recomendationList[$index].name}}&nbsp;{{recomendationList[$index].percentage}}</span>
+                                                    <span>{{recomendation.name}}&nbsp;{{recomendation.percentage}}</span>
                                                 </div>
                                             </div>
 
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-4 ">
-                                        <div class="recomended-item">
-                                            <div class="row">
-                                                <div class="col-md-12">
-                                                    <img class="recomended-image"
-                                                         ng-src="{{recomendationList[$index].imageSrc}}">
-                                                </div>
-                                                <div class="col-md-12">
-                                                    <span>{{recomendationList[$index].name}}&nbsp;{{recomendationList[$index].percentage}}</span>
-                                                </div>
-                                            </div>
+                                    <!--<div class="col-md-4 col-sm-4 col-xs-4 ">-->
+                                        <!--<div class="recomended-item">-->
+                                            <!--<div class="row">-->
+                                                <!--<div class="col-md-12">-->
+                                                    <!--<img class="recomended-image"-->
+                                                         <!--ng-src="{{recomendationList[$index].imageSrc}}">-->
+                                                <!--</div>-->
+                                                <!--<div class="col-md-12">-->
+                                                    <!--<span>{{recomendationList[$index].name}}&nbsp;{{recomendationList[$index].percentage}}</span>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
 
-                                        </div>
-                                    </div>
+                                        <!--</div>-->
+                                    <!--</div>-->
                                     <!--<div class="col-md-2 col-sm-2 col-xs-2 ">-->
                                         <!--<div class="recomended-item">-->
                                             <!--<div class="row">-->
