--- a/src/app/toolbar/login/registrationToolbar.html
+++ b/src/app/toolbar/login/registrationToolbar.html
@@ -13,9 +13,9 @@
     </div>
     <div class="col-md-12 registration-details">
         <div class="caption col-md-4 col-md-offset-4 registration-details">
-            <span class="caption-subject  font-black bold uppercase">Registration</span>
+            <!--<span class="caption-subject  font-black bold uppercase">Registration</span>-->
 
-            <div class="caption-helper font-black font-sm sub-text">Please take a moment to complete all of the information
+            <div class="caption-helper font-black font-sm sub-text" style="font-size: 17px;line-height: 60px">Please take a moment to complete all of the information
                 below.
             </div>
         </div>
