--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -46,7 +46,7 @@
                         <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
                     <span ng-if="showName">
                         <div class="user-error-msg-arrow" ></div>
-                        <div class="user-error-msg" >Enter your name</div>
+                        <div class="user-error-msg" >{{nameMsg}}</div>
                     </span>
                     </div>
                 </div>
@@ -172,8 +172,13 @@
                     <label class="col-md-4 control-label reg-label">Password<span style="color: red">*</span></label>
 
                     <div class="col-md-6 text-box-width">
-                        <input required type="password" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
+                        <span style="display: block">
+                        <input required type="{{password}}" class="form-control input-rounded" ng-model="reg.password" placeholder="Password"
                                style="margin-rightt: 5%">
+                            <span class="pull-right" style="margin-top: -25px;margin-right: 5px">
+                                <a ng-click="ShowPass('show')" ng-if="password == 'password'">Show</a>
+                        <a ng-click="ShowPass('hide')" ng-if="password == 'text'">Hide</a></span>
+                            </span>
                         <span ng-if="showPassword">
                         <div class="user-error-msg-arrow" ></div>
                         <div class="user-error-msg" >Enter Password</div>
